<resources>
    <string name="app_name">Curo</string>
    <string name="title_activity_home">Curo</string>
    <string name="hello_world">Hello world.</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_send_request">Send</string>
    <string name="title_activity_add">Contacts</string>
    <string name="title_activity_projects">Projects</string>
    <string name="title_activity_invest">Invest</string>
    <string name="save">Save</string>
    <string name="project_title">Project Title</string>
    <string name="project_title_hint">My project</string>
    <string name="project_about">Tell us about your idea</string>
    <string name="project_about_hint">This project will change the world.</string>
    <string name="project_category">Category</string>
    <string name="project_location">Project Location</string>
    <string name="project_duration">Funding Duration</string>
    <string name="project_goal">Funding Goal</string>
    <string name="title_section1">Transactions</string>
    <string name="title_section2">Deposits</string>
    <string name="category_prompt">Select Category</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="get_location">Get Location</string>
    <string name="num_of_days">Number of Days</string>
    <string name="num_of_days_hint">1-60 days</string>
    <string name="end_date_time">End on date and time</string>
    <string name="pick_date">Pick date</string>
    <string name="price">$300</string>
    <string name="submit">Submit</string>
    <string name="title_activity_create">CreateActivity</string>
    <string name="create_new_project">Create New Project</string>
    <string name="created_projects">My projects</string>
    <string name="my_name">John Doe</string>
    <string name="location">Location:</string>
    <string name="amount_funded">25% funded</string>
    <string name="amount_pledged">$33.54 pledged</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open.</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_wallet">Wallet</string>
    <string name="bitcoin_address">Wallet Address:</string>
    <string name="dummy_address">Error: No wallet address found</string>
    <string name="bitcoin_fake_amount">0.0</string>
    <string name="btc">(BTC)</string>
    <string name="currency_code">USD</string>
    <string name="fake_converted_amount">0.00</string>
    <string name="title_activity_buy">Deposit</string>
    <string name="title_activity_send">Send Money</string>
    <string name="my_people">My People:</string>
    <string name="personal">Personal</string>
    <string name="business">Business</string>
    <string name="add_new">Add New:</string>
    <string name="facebook">Facebook</string>
    <string name="contacts">Contacts</string>
    <string name="google_plus">Google+</string>
    <string name="Email">Email</string>
    <string name="email">Email</string>
    <string name="search">Search</string>
    <string name="scan">Scan</string>
    <string name="categories">Categories</string>
    <string name="title_activity_projects_list">Trending</string>
    <string name="title_activity_add_personal_bank">Add Personal Bank</string>
    <string name="title_activity_app_controller">AppController</string>
    <string name="title_activity_invest_info">Invest Info</string>
    <string name="name">Name, Email, Address etc.</string>
    <string name="no_user_selected_error">Please enter a user below</string>
    <string name="title_activity_request">RequestActivity</string>
    <string name="your_sending">Your sending:</string>
    <string name="amount">Amount:</string>
    <string name="dummy_amount">$0.00</string>
    <string name="to">To:</string>
    <string name="dummy_to">Aquila Haedrian</string>
    <string name="fee">Fee:      </string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="youre_sending">You\'re Sending:</string>
    <string name="total">Total:</string>
    <string name="youre_requesting">You\'re Requesting:</string>
    <string name="from">From:</string>
    <string name="request">Request</string>
    <string name="create_wallet">Create Wallet</string>
    <string name="import_wallet">Import Wallet</string>
    <string name="title_activity_create_wallet">Create Wallet</string>
    <string name="password">Password*\n<font size="12">(Minimum 8 characters and 1 number)</font></string>
    <string name="password_requirements">(Minimum 8 characters and 1 number)</string>
    <string name="title_activity_import_wallet">Import Wallet</string>
    <string name="title_activity_capture">Capture</string>
    <string name="wallet_address">Wallet Address:</string>
    <string name="import_string">Import</string>
    <string name="reenter_password">Re-enter Password*</string>
    <string name="passwords_dont_match">Passwords don\'t match.</string>
    <string name="note">Lender:</string>
    <string name="to_hint">Recipient\'s username</string>
    <string name="note_hint">Message to lender (optional)</string>
    <string name="action_send">Send Action</string>
    <string name="action_scan">Scan Action</string>
    <string name="sign_up">Sign up</string>
    <string name="button_ok">OK</string>
    <string name="contents_text">Plain text</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_status">Place a QR code inside the viewfinder rectangle to scan it.</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_error">Error</string>
    <string name="msg_invalid_value">Invalid value</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
    <string name="preferences_disable_barcode_scene_mode_title">No barcode scene mode</string>
    <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
    <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
    <string name="preferences_disable_exposure_title">No exposure</string>
    <string name="preferences_disable_metering_title">No metering</string>
    <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
    <string name="preferences_front_light_title">Use front light</string>
    <string name="preferences_front_light_auto">Automatic</string>
    <string name="preferences_front_light_off">Off</string>
    <string name="preferences_front_light_on">On</string>
    <string name="preferences_general_title">General settings</string>
    <string name="preferences_invert_scan_title">Invert scan</string>
    <string name="preferences_invert_scan_summary">Scan for white barcodes on black background. Not available on some devices.</string>
    <string name="preferences_orientation_title">No automatic rotation</string>
    <string name="preferences_play_beep_title">Beep</string>
    <string name="preferences_remember_duplicates_title">Remember duplicates</string>
    <string name="preferences_result_title">Result settings</string>
    <string name="preferences_scanning_title">When scanning for barcodes, decode\u2026</string>
    <string name="preferences_supplemental_summary">Try to retrieve more information about the barcode contents</string>
    <string name="preferences_supplemental_title">Retrieve more info</string>
    <string name="preferences_vibrate_title">Vibrate</string>
    <string name="result_text">Found plain text</string>
    <string name="error_button_text">Okay</string>
    <string name="error_message">QR code not valid.</string>
    <string name="to_dialog">to</string>
    <string name="recipient">John</string>
    <string name="question_mark">\?</string>
    <string name="from_hint">Email or Username</string>
    <string name="action_request">Action Request</string>
    <string name="title_activity_get_contacts">GetContacts</string>
    <string name="activity_contacts_list">Contacts List</string>
    <string name="activity_contact_detail">Contact Detail</string>
    <string name="contacts_list_search_results_title">Contacts List Search for \"%s\"</string>
    <string name="app_description">This is a sample app, demonstrating use of the Android system Contacts Provider.</string>
    <string name="imageview_description">Contact Thumbnail</string>
    <string name="address_button_description">View Address</string>
    <string name="menu_search">Search</string>
    <string name="menu_add_contact">Add Contact</string>
    <string name="menu_edit_contact">Edit Contact</string>
    <string name="no_contacts">No Contacts Found</string>
    <string name="no_contact_selected">No Contact Selected</string>
    <string name="search_hint">Find contacts</string>
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="search_match_other">Matches Other Field</string>
    <string name="no_address">No addresses found</string>
    <string name="no_intent_found">No application found to handle this action</string>
    <string name="title_activity_credit_check">Credit Check</string>
    <string name="lenddo_app_id">55252b62aa96123cde05473f</string>
    <string name="google_places_api_key">AIzaSyCmeRpZVUVGnNQGvmCXv9ikYLZCVDI0IXM</string>
    <string name="facebook_app_id">665660453522389</string>
    <string name="dummy_date">May 5, 2015</string>
    <string name="dummy_from">Me</string>
    <string name="buy_amount">Amount to Deposit</string>
    <string name="haedrian_labs">Haedrian Labs</string>
    <string name="version">Version</string>
    <string name="version_number">1.0.0</string>
    <string name="licenses">Licenses</string>
    <string name="picasso_license">Copyright 2013 Square, Inc.  Licensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at     http://www.apache.org/licenses/LICENSE-2.0  Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="picasso_title">Picasso</string>
    <string name="volley_title">Volley</string>
    <string name="volley_license">Copyright © 2011 The Android Open Source Project  Licensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at      http://www.apache.org/licenses/LICENSE-2.0  Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="group_member">Group Member</string>
    <string name="confirm">Confirm</string>
</resources>