<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.haedrian.haedrian.CreateWalletActivity" >

    <LinearLayout
        android:id="@+id/error_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_round_button_error"
        android:paddingBottom="10dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="5dp"
            android:text="@string/passwords_dont_match"
            android:textColor="@color/error_red_text"
            android:textSize="18sp"/>

    </LinearLayout>

    <EditText
        android:id="@+id/addBankEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:password="true"
        android:maxLines="1"
        android:hint="@string/password"/>

    <EditText
        android:id="@+id/reenter_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:maxLines="1"
        android:password="true"
        android:hint="@string/reenter_password" />


    <Button
        android:id="@+id/addBankButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/round_blue"
        android:padding="5dp"
        android:text="@string/create_wallet"
        android:textColor="@color/white"/>


</LinearLayout>
