<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="200dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@+id/buttons"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="75dp" >

        <TextView
            android:id="@+id/dialog_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"/>

        <TextView
            android:id="@+id/dialog_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_amount"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/dialog_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_dialog"
            android:layout_marginLeft="5dp" />

        <TextView
            android:id="@+id/dialog_recipient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipient"
            android:layout_marginLeft="5dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialog_question_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_mark"
            android:layout_marginLeft="2dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/dialog_cancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/primary"
            android:text="@string/cancel"
            android:textColor="@color/white"/>

        <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <Button
            android:id="@+id/dialog_send_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/primary"
            android:text="Send"
            android:textColor="@color/white"/>

    </LinearLayout>



</RelativeLayout>