<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.haedrian.haedrian.HomeScreen.AddMoney.GroupBuyActivity">

    <LinearLayout
        android:id="@+id/title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true">

        <TextView
            android:text="@string/group_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"/>

        <TextView
            android:text="@string/buy_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textSize="16sp"/>

    </LinearLayout>

    <ListView
        android:id="@+id/group_members_container"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/title_container"
        android:descendantFocusability="beforeDescendants"/>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/round_blue"
        android:text="@string/confirm"
        android:textColor="@color/white"/>

</RelativeLayout>
